--- a/reference/numpy.ipynb
+++ b/reference/numpy.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,7 @@
     }
    ],
    "source": [
+    "#Create a class library with methods to borrow, return, and check stock of books.\n",
     "class library:\n",
     "    def __init__(self,title,stock=0):\n",
     "        self.title=title\n",
