--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -49,6 +49,86 @@
     "        print(j, end=\" \")\n",
     "    print()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6ddea2e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"enter a number\"))\n",
+    "if a % 2 == 0:\n",
+    "    print (\"even\")\n",
+    "elif  a % 1 == 0:\n",
+    "        print (\"odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5d7bf63f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "432\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"enter a number\")\n",
+    "print(a[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "62ddd4f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = [1,2,3,4,5,6,7,8,9,]\n",
+    "max(d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e981b8a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (117307827.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfor sum  c%==n :\u001b[39m\n             ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
