--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -284,23 +284,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2f30a129",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2117664226.py, line 2)",
+     "evalue": "invalid syntax (997830925.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlist = for i in  s [::1]\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlist =i for i  in s\u001b[39m\n            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "s =  [ [1,2,3],[4,5,6],[7,8,9]]\n",
-    "list =ifor in s \n",
+    "list =i for i  in s \n",
     "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8eab30bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 20 #global variable\n",
+    "def add_five():\n",
+    "    return y+5\n",
+    "print(add_five())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b898925",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m  result = \u001b[32m5\u001b[39m+x\n\u001b[32m      4\u001b[39m  \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mx\u001b[49m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(add())\n",
+      "\u001b[31mNameError\u001b[39m: name 'x' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def add():\n",
+    " x = 5 #locaal variable \n",
+    " result = 5+x   \n",
+    " return result\n",
+    "print(x)\n",
+    "print(add())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "59ad1c35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def add(self, d, c):\n",
+    "        return d + c\n",
+    "\n",
+    "n = A()\n",
+    "print(n.add(9, 8))   # output: 17\n",
+    "\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "9f4e86a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class student:\n",
+    "    def  __init__(self,name,mark,age):\n",
+    "        self.name = name\n",
+    "        self.__mark = mark\n",
+    "        self.age = age\n",
+    "    def s(self):\n",
+    "            self.name = \"sidharth\"\n",
+    "            self.__mark = 90\n",
+    "            self.age = 18 \n",
+    "    def display (self):\n",
+    "      print(f\"my name is {self.name} my age is {self.age} and my mark {self.__mark}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "aa48448c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#abstract class\n",
+    "from abc import ABC, abstractmethod\n",
+    "class math(ABC):\n",
+    "    @abstractmethod\n",
+    "    def start(self):\n",
+    "        pass\n",
+    "class square(math):\n",
+    "    def v(self):\n",
+    "        return self.a*self.a\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "57718216",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "developer:sidharth, salary: 75000, language:python\n",
+      "manager: jordan carter, salary: 100000, team size: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class employee:\n",
+    "    def __init__(self,name,salary):\n",
+    "        self.salary = salary\n",
+    "        self.name = name\n",
+    "\n",
+    "\n",
+    "class developer(employee):\n",
+    "    def __init__(self,name,salary,language):\n",
+    "       super().__init__(name,salary)\n",
+    "       self.language = language\n",
+    "    def show_details(self):\n",
+    "        return f\"developer:{self.name}, salary: {self.salary}, language:{self.language}\"\n",
+    "class manager(employee):\n",
+    "    def __init__(self, name, salary, team_size):\n",
+    "        super().__init__ (name,salary)\n",
+    "        self.team_size = team_size\n",
+    "    def show_details(self):\n",
+    "       return f\"manager: {self.name}, salary: {self.salary}, team size: {self.team_size}\"\n",
+    "    \n",
+    "employer1 = developer(\"sidharth\",\"75000\",\"python\")\n",
+    "print(employer1.show_details())\n",
+    "employer2 = manager(\"jordan carter\",\"100000\",\"6\")\n",
+    "print(employer2.show_details())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4858fc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class bank:\n",
+    "    def __init__(self,name,amount)\n",
+    "     "
    ]
   }
  ],
