--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -466,14 +466,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d4858fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "employee:sidharth,age:18,salary:700000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name,age,):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "class employee(Person):\n",
+    "    def __init__(self,name,age,salary):\n",
+    "      super().__init__(name,age,)\n",
+    "      self.salary = salary\n",
+    "    def show_details(self):\n",
+    "        return f\"employee:{self.name},age:{self.age},salary:{self.salary}\"\n",
+    "worker1 = employee (\"sidharth\",18,\"700000\")\n",
+    "print(worker1.show_details())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bb08996",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class bank:\n",
-    "    def __init__(self,name,amount)\n",
-    "     "
+    "class vehicle:\n",
+    "    def __init__(self,brand):\n",
+    "        self.brand = brand\n",
+    "    def __init__(self):\n",
+    "        return f\"{}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dc8e0463",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "porsche car engine roars to life!\n",
+      "hayabusa bike engine revs up!\n",
+      "volvo truck engine rumbles loudly!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def __init__(self, brand):\n",
+    "        self.brand = brand\n",
+    "    def start_engine(self):\n",
+    "        return f\"{self.brand} engine is starting...\"\n",
+    "class Car(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        return f\"{self.brand} car engine roars to life!\"\n",
+    "class Bike(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        return f\"{self.brand} bike engine revs up!\"\n",
+    "class Truck(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        return f\"{self.brand} truck engine rumbles loudly!\"\n",
+    "v1 = Car(\"porsche\")\n",
+    "v2 = Bike(\"hayabusa\")\n",
+    "v3 = Truck(\"volvo\")\n",
+    "print(v1.start_engine())\n",
+    "print(v2.start_engine())\n",
+    "print(v3.start_engine())"
    ]
   }
  ],
