--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -495,21 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2bb08996",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class vehicle:\n",
-    "    def __init__(self,brand):\n",
-    "        self.brand = brand\n",
-    "    def __init__(self):\n",
-    "        return f\"{}\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "dc8e0463",
    "metadata": {},
    "outputs": [
@@ -517,9 +503,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "porsche car engine roars to life!\n",
-      "hayabusa bike engine revs up!\n",
-      "volvo truck engine rumbles loudly!\n"
+      "PORSCHE neutral\n",
+      "PORSCHE music is being played\n",
+      "HUMMER EV battery level at 99%\n",
+      "SUZUKI  reving \n",
+      "VOLVO loud rumbling\n"
      ]
     }
    ],
@@ -531,20 +519,73 @@
     "        return f\"{self.brand} engine is starting...\"\n",
     "class Car(Vehicle):\n",
     "    def start_engine(self):\n",
-    "        return f\"{self.brand} car engine roars to life!\"\n",
+    "        return f\"{self.brand} neutral\"\n",
+    "    def play_music(self):\n",
+    "         return f\"{self.brand} music is being played\"\n",
+    "class electric (Vehicle):\n",
+    "    def charge_battery(self):\n",
+    "         return f\"{self.brand} battery level at 99%\"\n",
     "class Bike(Vehicle):\n",
     "    def start_engine(self):\n",
-    "        return f\"{self.brand} bike engine revs up!\"\n",
+    "        return f\"{self.brand}  reving \"\n",
     "class Truck(Vehicle):\n",
     "    def start_engine(self):\n",
-    "        return f\"{self.brand} truck engine rumbles loudly!\"\n",
-    "v1 = Car(\"porsche\")\n",
-    "v2 = Bike(\"hayabusa\")\n",
-    "v3 = Truck(\"volvo\")\n",
-    "print(v1.start_engine())\n",
-    "print(v2.start_engine())\n",
-    "print(v3.start_engine())"
+    "        return f\"{self.brand} loud rumbling\"\n",
+    "a = Car(\"PORSCHE\")\n",
+    "b = electric(\"HUMMER EV\")\n",
+    "c = Bike(\"SUZUKI\")\n",
+    "d = Truck(\"VOLVO\")\n",
+    "\n",
+    "print(a.start_engine())\n",
+    "print(a.play_music())\n",
+    "print(b.charge_battery())\n",
+    "print(c.start_engine())\n",
+    "print(d.start_engine())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "54f0444c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "class shapes:\n",
+    "    def area (self):\n",
+    "     return \"not the defined the shape\"\n",
+    "class rectangle(shapes):\n",
+    "   def __init__(self, length, breadth):\n",
+    "        self.length = length\n",
+    "        self.breadth = breadth\n",
+    "   def area(self): #method overriding\n",
+    "        return self.length*self.breadth #calculation\n",
+    "class square(shapes):\n",
+    "    def __init__(self, side):\n",
+    "        self.side = side\n",
+    "    def area(self):  # method overriding\n",
+    "        return self.side*self.side #calculation\n",
+    "Q1 =  rectangle(2,4)\n",
+    "Q2 =  square(3)\n",
+    "print( Q1.area())  \n",
+    "print( Q2.area())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917a54b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
