--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -581,11 +581,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "917a54b5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "haven't stock left\n",
+      "None\n",
+      "you're stock added successfull.... now 10 are remining..\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "class library:\n",
+    "    def __init__(self,title,stock=0):\n",
+    "        self.title=title\n",
+    "        self.stock=stock\n",
+    "    def  borrow(self,s):\n",
+    "        if self.stock <0:\n",
+    "            self.stock -=s\n",
+    "            return f\"{self.stock} books remaining...\"\n",
+    "        else:\n",
+    "            print(\"haven't stock left\")\n",
+    "    def return_book(self,n=0):\n",
+    "        self.stock+=n \n",
+    "        return f\"you're stock added successfull.... now {self.stock} are remining..\"\n",
+    "    def check_stock(self):\n",
+    "          print(self.stock)\n",
+    "book1=library(\"beserk\",5)\n",
+    "print(book1.borrow(5))  \n",
+    "print(book1.return_book(5))\n",
+    "book1.check_stock()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4310fab3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class shape :\n",
+    "    def __init__(self):\n",
+    "        return f\"draw a generic a shape\"\n",
+    "class circle(shape):\n",
+    "    def __init__(self):\n",
+    "        return f\"draw a circle\"\n",
+    "class rectangle(shape):\n",
+    "    def __init__(self):\n",
+    "        return f\"draw a rectangle\"\n",
+    "class sqaure(shape):\n",
+    "    def __init__(self):\n",
+    "        return f\"draw a square\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104599ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getter = method used to access (read) the value of a private variable.\n",
+    "#setter = method used to update (write) the value of a private variable.\n",
+    "# private variable = variale declared using double underscore(__)\n",
+    "# data encapsulation = hiding the complex the part of the data and showing the essential"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "53f9295c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price is too low!\n",
+      "12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class laptop:\n",
+    "    def __init__(self, price): # private variable\n",
+    "        self.__price = price\n",
+    "    # using getter\n",
+    "    def get_price(self):\n",
+    "        return self.__price\n",
+    "   # using setter\n",
+    "    def set_price(self, price):\n",
+    "        if price >10000:\n",
+    "            self.__price = price\n",
+    "        else:\n",
+    "            print(\"price is too low!\")\n",
+    "\n",
+    " # making object\n",
+    "a1 = laptop(12000) \n",
+    "a1.set_price(7000)\n",
+    "print(a1.get_price())\n",
+    "        \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef29b37d",
+   "metadata": {},
+   "source": [
+    "create a book class "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ace170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class book:\n",
+    "    def __init__(self,title): #private variable\n",
+    "        self.__title = title\n",
+    "#using getter\n",
+    "    def get_title(self):\n",
+    "        return self.__title\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33226bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# method overloading means having multiplwe methods with same name but different parameters.\n",
+    "# *args allows the method to accept any number of arguments.(for variables number of positional argument)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb415b5",
+   "metadata": {},
+   "source": [
+    "create a class maths with a method multiply():\n",
+    "2*3 = 6\n",
+    "2*3*2 = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "2ba308ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "144\n"
+     ]
+    }
+   ],
+   "source": [
+    "class calculator:\n",
+    "    def product(self, *args):\n",
+    "        product = 1\n",
+    "\n",
+    "        for i in args:\n",
+    "            product = product*i\n",
+    "        return product\n",
+    "calc  = calculator()\n",
+    "print(calc.product(3, 6))\n",
+    "print(calc.product(3,6,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5feb3f51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:sidharth\n",
+      "age:18\n",
+      "name:sidharth\n",
+      "age:18\n",
+      "salary:75000\n",
+      "department:aiml\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a class employee with a method show_details(**kwargs)that should:\n",
+    "# accept ay number of keyword argumnts like name, age, salary,departments.\n",
+    "class Employee:\n",
+    "    def show_details(self,**kwargs):\n",
+    "        for k,v in kwargs.items():\n",
+    "            print(f'{k}:{v}')\n",
+    "#passing object\n",
+    "emp = Employee()\n",
+    "emp.show_details( name = \"sidharth\", age =18) \n",
+    "emp.show_details( name = \"sidharth\", age = 18, salary = 75000, department = \"aiml\")    "
+   ]
   }
  ],
  "metadata": {
