--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "5feb3f51",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
       "name:sidharth\n",
       "age:18\n",
       "salary:75000\n",
-      "department:aiml\n"
+      "department:aiml engeneering\n"
      ]
     }
    ],
@@ -792,7 +792,7 @@
     "#passing object\n",
     "emp = Employee()\n",
     "emp.show_details( name = \"sidharth\", age =18) \n",
-    "emp.show_details( name = \"sidharth\", age = 18, salary = 75000, department = \"aiml\")    "
+    "emp.show_details( name = \"sidharth\", age = 18, salary = 75000, department = \"aiml engeneering\")    "
    ]
   }
  ],
