--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "dc8e0463",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,8 @@
     "print(a.play_music())\n",
     "print(b.charge_battery())\n",
     "print(c.start_engine())\n",
-    "print(d.start_engine())"
+    "\n",
+    "print(d.start_engine())\n"
    ]
   },
   {
