--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -621,24 +621,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4310fab3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "draw a generic a shape\n",
+      "draw a circle\n",
+      "draw a rectangle\n",
+      "draw a square\n"
+     ]
+    }
+   ],
    "source": [
     "class shape :\n",
-    "    def __init__(self):\n",
+    "    def draw(self):\n",
     "        return f\"draw a generic a shape\"\n",
     "class circle(shape):\n",
-    "    def __init__(self):\n",
+    "    def draw(self):\n",
     "        return f\"draw a circle\"\n",
     "class rectangle(shape):\n",
-    "    def __init__(self):\n",
+    "    def draw (self):\n",
     "        return f\"draw a rectangle\"\n",
-    "class sqaure(shape):\n",
-    "    def __init__(self):\n",
+    "class square(shape):\n",
+    "    def draw(self):\n",
     "        return f\"draw a square\"\n",
-    "\n"
+    "shape =[shape(),circle(),rectangle(),square()]\n",
+    "for s in shape :\n",
+    "    print (s.draw())\n"
    ]
   },
   {
@@ -794,6 +807,35 @@
     "emp = Employee()\n",
     "emp.show_details( name = \"sidharth\", age =18) \n",
     "emp.show_details( name = \"sidharth\", age = 18, salary = 75000, department = \"aiml engeneering\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e56b1a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 2, 4, 1, 5, 3, 6]\n",
+      "List without duplicates: [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_duplicates(lst):\n",
+    " v1 = set()\n",
+    " result = []\n",
+    " for num in lst:\n",
+    "    if num not in v1:\n",
+    "        result.append(num)\n",
+    "        v1.add(num)\n",
+    "    return result\n",
+    "numbers = [1, 2, 3, 2, 4, 1, 5, 3, 6]\n",
+    "print(\"Original list:\", numbers)\n",
+    "print(\"List without duplicates:\", remove_duplicates(numbers))\n"
    ]
   }
  ],
