--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc8e0463",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PORSCHE neutral\n",
+      "PORSCHE  is on neutral\n",
       "PORSCHE music is being played\n",
       "HUMMER EV battery level at 99%\n",
       "SUZUKI  reving \n",
@@ -519,7 +519,7 @@
     "        return f\"{self.brand} engine is starting...\"\n",
     "class Car(Vehicle):\n",
     "    def start_engine(self):\n",
-    "        return f\"{self.brand} neutral\"\n",
+    "        return f\"{self.brand}  is on neutral\"\n",
     "    def play_music(self):\n",
     "         return f\"{self.brand} music is being played\"\n",
     "class electric (Vehicle):\n",
@@ -836,6 +836,118 @@
     "numbers = [1, 2, 3, 2, 4, 1, 5, 3, 6]\n",
     "print(\"Original list:\", numbers)\n",
     "print(\"List without duplicates:\", remove_duplicates(numbers))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6435c4b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am sidharth and my salary is750000 \n",
+      "company is amd\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class employee:\n",
+    "    company_name = \"puma\"\n",
+    "    def __init__(self,name,salary) :\n",
+    "        self.name =  name\n",
+    "        self.salary = salary\n",
+    "#using instance method\n",
+    "    def show_details(self):\n",
+    "        print (f\"i am {self.name} and my salary is{self.salary} \")\n",
+    "#using class method\n",
+    "    @classmethod\n",
+    "    def change_company(cls,amd):\n",
+    "      cls.company_name = amd\n",
+    "      return f\"company is {cls.company_name}\" \n",
+    "# using static method\n",
+    "    @staticmethod\n",
+    "    def is_valid (salary):\n",
+    "        return salary>0\n",
+    "\n",
+    "e1 = employee(\"sidharth\",750000)\n",
+    "e1.show_details()\n",
+    "print(employee.change_company(\"amd\"))\n",
+    "print(employee.is_valid(4000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2325f4ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the rate now is 13\n",
+      "minimum balance should be 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "    rate = 12\n",
+    "    def __init__(self,balance):\n",
+    "        self.balance = balance\n",
+    "#using instance method\n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "#using class method\n",
+    "    @classmethod\n",
+    "    def set_interest_rate(cls,rate):\n",
+    "        cls.rate = rate\n",
+    "        return f\"the rate now is {cls.rate}\"\n",
+    "#using static method\n",
+    "    @staticmethod\n",
+    "    def bank_policy():\n",
+    "        print(\"minimum balance should be 1000\")\n",
+    "c1 = BankAccount(45000)\n",
+    "c1.deposit(1000)\n",
+    "print(BankAccount.set_interest_rate(13))\n",
+    "BankAccount.bank_policy()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d179cbb",
+   "metadata": {},
+   "source": [
+    "write a program to reverse a tuple wihtout using slicing([::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2e07426",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[55]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a=(\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m5\u001b[39m,\u001b[32m6\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m v =\u001b[43ma\u001b[49m\u001b[43m(\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(v)\n",
+      "\u001b[31mTypeError\u001b[39m: 'tuple' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "a=(1,2,3,4,5,6)\n",
+    "v =a(-1)\n",
+    "print(v)\n"
    ]
   }
  ],
