--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -949,6 +949,70 @@
     "v =a(-1)\n",
     "print(v)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cee37e21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product sony headphone costs 20000 and have warranty up to 2 year \n",
+      "the product CHROME HEARTS leather jacket costs about 45000 and the size is XL\n",
+      "the sofa is imported\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Product:\n",
+    "    def __init__(self,name,price):\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "class Electronics(Product):\n",
+    "    def __init__(self, name, price, warranty):\n",
+    "     super().__init__(name,price)\n",
+    "     self.warranty = warranty\n",
+    "     print( f\"The product {self.name} costs {self.price} and have warranty up to {self.warranty} year \")\n",
+    "class  clothing(Product):\n",
+    "   def __init__(self,name, price, size ):\n",
+    "        super().__init__(name,price)\n",
+    "        self.size =size \n",
+    "        print( f\"the product {self.name} costs about {self.price} and the size is {self.size}\")\n",
+    "class Furniture(Product):\n",
+    "   def __init__(self, material):\n",
+    "        self.material = material\n",
+    "        print (f\"the {self.material} is imported\")\n",
+    "A1 = Electronics (\"sony headphone\",20000,2)\n",
+    "A2 = clothing (\"CHROME HEARTS leather jacket\",45000,\"XL\")\n",
+    "A3 = Furniture (\"sofa\")\n",
+    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c45811c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FullTimeEmployee:\n",
+    "    def __init__(self,name, salary):\n",
+    "        self.name = name\n",
+    "        self.salary = salary\n",
+    "    def calculate(self):\n",
+    "        return(f\"you are {self.name} and your fixed salary is {self.salary}\") \n",
+    "class PartTimeEmployee:\n",
+    "    def __init__(self,name, rate):\n",
+    "        self.name = name\n",
+    "        self.rate = rate\n",
+    "    \n",
+    "    \n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
