--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -997,21 +997,36 @@
    "execution_count": null,
    "id": "c45811c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
    "source": [
     "class FullTimeEmployee:\n",
     "    def __init__(self,name, salary):\n",
     "        self.name = name\n",
     "        self.salary = salary\n",
+    "\n",
     "    def calculate(self):\n",
     "        return(f\"you are {self.name} and your fixed salary is {self.salary}\") \n",
+    "    \n",
     "class PartTimeEmployee:\n",
-    "    def __init__(self,name, rate):\n",
+    "    def __init__(self,name, rate, hour):\n",
     "        self.name = name\n",
     "        self.rate = rate\n",
-    "    \n",
-    "    \n",
-    "    \n"
+    "        self.hour = hour\n",
+    "\n",
+    "    def calculate_salary(self):\n",
+    "        y = self.rate*self.hour\n",
+    "        return y\n",
+    "\n",
+    "a1 = PartTimeEmployee(\"sidharth\",5,8)\n",
+    "print(a1.calculate_salary())"
    ]
   }
  ],
