--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "f8bec5fb",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aab5b060",
    "metadata": {},
    "outputs": [
@@ -35,11 +35,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 \n",
-      "1 2 \n",
-      "1 2 3 \n",
-      "1 2 3 4 \n",
-      "1 2 3 4 5 \n"
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n"
      ]
     }
    ],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "95ace170",
    "metadata": {},
    "outputs": [],
@@ -1027,6 +1027,138 @@
     "\n",
     "a1 = PartTimeEmployee(\"sidharth\",5,8)\n",
     "print(a1.calculate_salary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67828e69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "-3\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"enter a number\"))\n",
+    "b = int(input(\"enter a number\"))\n",
+    "print(a+b)\n",
+    "print(a-b)\n",
+    "print(a*b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4d40dc77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Car': 'skoda', 'model': 2018, 'type': 'AMT'}\n",
+      "{'Car': 'ferrari', 'model': 2018, 'type': 'AMT'}\n",
+      "{'Car': 'ferrari', 'model': '2025', 'type': 'AMT'}\n",
+      "{'Car': 'ferrari', 'type': 'AMT'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Vehicle ={\"Car\":\"skoda\",\"model\": 2018,\"type\":\"AMT\"}\n",
+    "print(Vehicle)\n",
+    "\n",
+    "\n",
+    "Vehicle[\"Car\"] = \"ferrari\"\n",
+    "print(Vehicle)\n",
+    "\n",
+    "\n",
+    "Vehicle [\"model\"] = \"2025\"\n",
+    "print(Vehicle)\n",
+    "\n",
+    "del Vehicle[\"model\"]\n",
+    "print(Vehicle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f51087f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sedans', 'hatchback', 'suv', 'mini suv', 'coupe']\n",
+      "['sedans', 'hatchback', 'suv', 'crossover', 'mini suv', 'coupe']\n",
+      "['sedans', 'hatchback', 'suv', 'crossover', 'coupe']\n",
+      "['coupe', 'crossover', 'hatchback', 'sedans', 'suv']\n",
+      "['coupe', 'crossover', 'hatchback', 'sedans', 'suv', 'hyper sport']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Cars = [\"sedans\",\"hatchback\",\"suv\",\"mini suv\",\"coupe\"]\n",
+    "print(Cars)\n",
+    "\n",
+    "Cars.insert(3,\"crossover\")\n",
+    "print(Cars)\n",
+    "\n",
+    "Cars.remove(\"mini suv\")\n",
+    "print(Cars)\n",
+    "\n",
+    "Cars.sort(key=str.lower)\n",
+    "print(Cars)\n",
+    "\n",
+    "Cars.append(\"hyper sport\")\n",
+    "print(Cars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b10739c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fantastic shawarma is just for 110 rupees in Freetime near pipeline jn\n"
+     ]
+    }
+   ],
+   "source": [
+    "class food:\n",
+    "    def __init__(self,name, price, hotel, place, ):\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "        self.hotel = hotel\n",
+    "        self.place = place\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return (f\"this fantastic {self.name} is just for {self.price} rupees in {self.hotel} near {self.place}\")\n",
+    "a = food(\"shawarma\",110,\"Freetime\",\"pipeline jn\")\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8602943a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    " "
    ]
   }
  ],
