--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -284,23 +284,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "2f30a129",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (997830925.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlist =i for i  in s\u001b[39m\n            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
      ]
     }
    ],
    "source": [
-    "s =  [ [1,2,3],[4,5,6],[7,8,9]]\n",
-    "list =i for i  in s \n",
-    "print(list)"
+    "i =  [ [1,2,3],[4,5,6],[7,8,9]]\n",
+    "list = i \n",
+    "for i  in s:\n",
+    " print(list)"
    ]
   },
   {
@@ -326,28 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8b898925",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m  result = \u001b[32m5\u001b[39m+x\n\u001b[32m      4\u001b[39m  \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mx\u001b[49m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(add())\n",
-      "\u001b[31mNameError\u001b[39m: name 'x' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
      ]
     }
    ],
    "source": [
     "def add():\n",
-    " x = 5 #locaal variable \n",
-    " result = 5+x   \n",
+    " x = 5 #local variable \n",
+    " result  = 5+x   \n",
     " return result\n",
-    "print(x)\n",
+    " print(x)\n",
     "print(add())"
    ]
   },
@@ -714,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "95ace170",
    "metadata": {},
    "outputs": [],
@@ -1152,8 +1150,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8602943a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci Series: 0 1 1 2 3 5 8 13 "
+     ]
+    }
+   ],
+   "source": [
+    "# Fibonacci series using iteration\n",
+    "\n",
+    "# Input\n",
+    "N = int(input(\"Enter the number of terms: \"))\n",
+    "\n",
+    "# Initialize first two terms\n",
+    "a, b = 0, 1\n",
+    "\n",
+    "print(\"Fibonacci Series:\", end=\" \")\n",
+    "\n",
+    "for i in range(N):\n",
+    "    print(a, end=\" \")\n",
+    "    # Update values\n",
+    "    a, b = b, a + b\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e23281dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Alice, Marks: 85\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, name, marks):\n",
+    "        self.name = name\n",
+    "        self.marks = marks\n",
+    "\n",
+    "    # Instance method\n",
+    "    def display_info(self):\n",
+    "        print(f\"Name: {self.name}, Marks: {self.marks}\")\n",
+    "\n",
+    "s1 = Student(\"Alice\", 85)\n",
+    "s1.display_info()  # works on a specific object\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "62542b2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team:REAL MADRID  League:LALIGA\n"
+     ]
+    }
+   ],
+   "source": [
+    "class football:\n",
+    "    def __init__(self, team,  league):\n",
+    "        self.team = team\n",
+    "        self.league = league\n",
+    "\n",
+    "    def display(self):\n",
+    "        print(f\"Team:{self.team}  League:{self.league}\")\n",
+    "    \n",
+    "s = football(\"REAL MADRID\",\"LALIGA\")\n",
+    "s.display()            \n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ea6ad442",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u broke as hell. get a j*b\n",
+      "10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class phone:\n",
+    "    def __init__(self,price):\n",
+    "        self.__price = price\n",
+    "#using getter\n",
+    "    def get_price(self):\n",
+    "     return self.__price\n",
+    "\n",
+    "    def set_price(self, price):\n",
+    "       if price >2000:\n",
+    "         self.__price = price\n",
+    "       else:\n",
+    "          print(\"u broke as hell. get a j*b\")\n",
+    "a1 = phone(10000)\n",
+    "a1.set_price(1000)\n",
+    "print(a1.get_price())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dfafa85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'sidharth', 'class': 'plus two', 'city': 'Ernakulam'}\n",
+      "{'name': 'sidharth', 'class': 'plus two', 'city': 'Ernakulam', 'subject': 'computer science'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'sidharth', 'city': 'Ernakulam', 'subject': 'computer science'}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = {\"name\" : \"sidharth\", \"class\" :\"plus two\", \"city\": \"Ernakulam\" }\n",
+    "print(c)\n",
+    "c[\"subject\"] = \"computer science\"\n",
+    "print(c)\n",
+    "del c[\"class\"]\n",
+    "c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa533505",
    "metadata": {},
    "outputs": [],
    "source": []
