--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -1306,8 +1306,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "fa533505",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 13% interest on student loan, deposit 3000 to complete plan'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class bank:\n",
+    "    def __init__(self, loan, deposit):\n",
+    "        self.loan =  loan\n",
+    "        self.deposit = deposit\n",
+    "\n",
+    "    def cashier(self):\n",
+    "        return (f\" 13% interest on {self.loan} loan, deposit {self.deposit} to complete plan\")\n",
+    "    \n",
+    "a = bank (\"student\", 3000)\n",
+    "a.cashier()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b942f8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class calculator:\n",
+    "    def __init__(self,a,b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    def add(self):\n",
+    "        return self.a+ self.b\n",
+    "    \n",
+    "    def subtract(self):\n",
+    "        return self.a-self.b\n",
+    "    \n",
+    "    def multiply(self):\n",
+    "        return self.a*self.b\n",
+    "    \n",
+    "d1 = calculator(2,3)\n",
+    "d1.subtract()\n",
+    "d1.multiply()\n",
+    "d1.add()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f9053cc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " name: sidharth, role: AI Engineer salary: 90000\n",
+      "name :frida, role:branch salary: 120000\n",
+      " name: sidharth, role: AI Engineer salary: 100000\n",
+      "name :frida, role:branch salary: 130000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a base class Employee with the following: 1.Attributes : emp_id, name, and private attribute __salary Methods :\n",
+    "\n",
+    "#a).set_salary(amount) → sets the salary (should not accept negative values)\n",
+    "#b). get_salary() → returns the salary\n",
+    "\n",
+    "#2.Create subclasses Developer and Manager with their own role attribute.\n",
+    "#3. Print each employee's name, role, and salary.\n",
+    "\n",
+    "class Employee:\n",
+    "    def __init__(self, emp_id, name, salary):\n",
+    "        self.emp_id = emp_id\n",
+    "        self.name = name\n",
+    "        self.__salary = salary\n",
+    "\n",
+    "    def set_salary(self,amount):\n",
+    "        if amount < 0 :\n",
+    "            print(\"value cannot be negative\")\n",
+    "        else:\n",
+    "            self.__salary = amount\n",
+    "    \n",
+    "    def get_salary(self):\n",
+    "        return self.__salary\n",
+    "\n",
+    "class Developer(Employee):\n",
+    "    def __init__(self, emp_id, name, salary, role):\n",
+    "        super().__init__(emp_id, name, salary)\n",
+    "        self.role = role\n",
+    "\n",
+    "    def show_details(self):\n",
+    "        return f\" name: {self.name}, role: {self.role} salary: {self.get_salary()}\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Manager(Employee):\n",
+    "    def __init__(self, emp_id, name, salary, role):\n",
+    "        super().__init__(emp_id,name,salary)\n",
+    "        self.role = role\n",
+    "    \n",
+    "    def show_details(self):\n",
+    "        return f\"name :{self.name}, role:{self.role} salary: {self.get_salary()}\"\n",
+    "\n",
+    "obj1 = Developer(7025,\"sidharth\",90000,\"AI Engineer\")\n",
+    "obj2 = Manager(997248,\"frida\", 120000,\"branch\")\n",
+    "print(obj1.show_details())\n",
+    "print(obj2.show_details())\n",
+    "obj1.set_salary(100000)\n",
+    "print(obj1.show_details())\n",
+    "obj2.set_salary(130000)\n",
+    "print(obj2.show_details())\n",
+    "\n",
+    "\n",
+    "    \n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d34bb022",
    "metadata": {},
    "outputs": [],
    "source": []
