--- a/reference/mynumpy.ipynb
+++ b/reference/mynumpy.ipynb
@@ -1447,8 +1447,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d34bb022",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the name of the car is Bentley Flying Spur and the price of the car is 25000000\n",
+      "budget is too low\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def __init__(self,name,price):\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "    \n",
+    "    def show_brochure(self):\n",
+    "        return f\"the name of the car is {self.name} and the price of the car is {self.price}\"\n",
+    "                                 \n",
+    "    def set_price(self, price):\n",
+    "        if price < 0:\n",
+    "            print(\"budget is too low\")\n",
+    "        else:\n",
+    "            self.set_price = 0\n",
+    "\n",
+    "    def get_price(self):\n",
+    "        return self.price\n",
+    "    \n",
+    "object1 = Vehicle(\"Bentley Flying Spur\",25000000)\n",
+    "print(object1.show_brochure())\n",
+    "object1.set_price(-2500000)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "040f8c7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addition: 68\n",
+      "subtraction: -22\n",
+      "multiply: 1035\n",
+      "division: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a calculator problem using OOP concepts like class, objects, instance methods, and encapsulation ?.\n",
+    "class Calculator:\n",
+    "    def __init__(self, a,b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    def add(self):\n",
+    "        return self.a + self.b\n",
+    "    \n",
+    "    def subtract(self):\n",
+    "        return self.a - self.b\n",
+    "    \n",
+    "    def multiply(self):\n",
+    "        return self.a*self.b\n",
+    "\n",
+    "    def division(self):\n",
+    "         return self.a/self.a\n",
+    "objectr = Calculator(23,45)\n",
+    "print(\"addition:\",objectr.add())\n",
+    "print(\"subtraction:\",objectr.subtract())\n",
+    "print(\"multiply:\",objectr.multiply())\n",
+    "print(\"division:\",objectr.division())\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddd9b3f9",
    "metadata": {},
    "outputs": [],
    "source": []
