--- a/reference/numpy.ipynb
+++ b/reference/numpy.ipynb
@@ -12,10 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
@@ -402,8 +404,7 @@
     "\n",
     "# arange is an array-valued version of the built-in Python range function\n",
     "\n",
-    "a = np.arange(10) # 0.... n-1\n",
-    "az"
+    "a = np.arange(10) # 0.... n-1\n"
    ]
   },
   {
